<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

     <EditText
        android:id="@+id/pssd"
        android:layout_width="220sp"
        android:layout_height="35sp"
        android:layout_alignLeft="@+id/user"
        android:layout_below="@+id/user"
        android:layout_marginTop="34sp"
        android:ems="10"
        android:maxLength="24"
        android:inputType="textPassword" 
        android:digits="@string/register_name_digits"
        android:background="@drawable/bg_edittext"
        android:text="123456"
        />
    <EditText
        android:id="@+id/user"
        android:layout_width="220sp"
        android:layout_height="35sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="19sp"
        android:layout_marginTop="61sp"
        android:background="@drawable/bg_edittext"
        android:inputType="text"
        android:maxLength="24"
         android:digits="@string/register_name_digits"
        android:ems="10" 
        android:text="00001"
        />


<TextView
    android:id="@+id/login_user_input"
    android:layout_width="60sp"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/user"
    android:layout_alignParentLeft="true"
    android:layout_alignTop="@+id/user"
    android:layout_toLeftOf="@+id/user"
    android:text="@string/name" />
 <TextView
    android:id="@+id/login_pswd_input"
    android:layout_width="60sp"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/pssd"
    android:layout_alignParentLeft="true"
    android:layout_alignTop="@+id/pssd"
    android:layout_toLeftOf="@+id/pssd"
    android:text="@string/pswd" />

 <Button
     android:id="@+id/button1"
      android:background="#00868B"
     android:layout_width="100sp"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/login_pswd_input"
     android:layout_below="@+id/pssd"
     android:layout_marginTop="109dp"
     android:text="@string/denglu" />

 <Button
     android:id="@+id/button2"
     android:background="#00868B"
     android:layout_width="100sp"
     android:layout_height="wrap_content"
     android:layout_alignBaseline="@+id/button1"
     android:layout_alignBottom="@+id/button1"
     android:layout_alignRight="@+id/pssd"
     android:text="@string/zhuce" />

</RelativeLayout>
