<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp" >

    <EditText
        android:id="@+id/editText1"
        android:background="@drawable/bg_edittext"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/editText5"
        android:layout_marginTop="46dp"
        android:ems="10" 
        android:digits="0-9_"
         />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        android:ems="10" 
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editText3"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        
        
         />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:digits="0-9"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="16dp"
        android:ems="10"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText4"
        android:layout_alignBottom="@+id/editText4"
        android:layout_toLeftOf="@+id/editText4"
        android:text="@string/psd"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_toLeftOf="@+id/editText1"
        android:text="@string/userid"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_toLeftOf="@+id/editText3"
        android:text="@string/pdagain"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_toLeftOf="@+id/editText5"
        android:text="@string/dhhm"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_toLeftOf="@+id/editText2"
        android:text="@string/mail"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/textView5"
        android:background="@drawable/bg_edittext"
        android:ems="10" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/editText6"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/textView5"
        android:background="@drawable/bg_edittext"
        android:ems="10" />

    <EditText
        android:id="@+id/editText8"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText7"
        android:layout_marginTop="20dp"
        android:ems="10" />

    <EditText
        android:id="@+id/editText9"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText8"
        android:layout_marginTop="15dp"
        android:ems="10" />

    <EditText
        android:id="@+id/editText10"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText9"
        android:layout_marginTop="14dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText6"
        android:layout_alignBottom="@+id/editText6"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/zyjb"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText7"
        android:layout_alignBottom="@+id/editText7"
        android:layout_alignLeft="@+id/textView6"
        android:text="@string/zyzw"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText8"
        android:layout_alignBottom="@+id/editText8"
        android:layout_alignLeft="@+id/textView7"
        android:textSize="20dp" 
        android:text="@string/xmjl" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText9"
        android:layout_alignBottom="@+id/editText9"
        android:layout_alignRight="@+id/textView8"
        android:text="@string/zy"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText10"
        android:layout_alignBottom="@+id/editText10"
        android:layout_alignRight="@+id/textView9"
        android:text="@string/sf"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editText11"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText10"
        android:layout_marginTop="16dp"
        android:ems="10" />

    <EditText
        android:id="@+id/editText12"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/editText11"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10" />

    <EditText
        android:id="@+id/editText13"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText12"
        android:layout_marginTop="16dp"
        android:ems="10" />

    <EditText
        android:id="@+id/editText14"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/editText13"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10" />

    <EditText
        android:id="@+id/editText15"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/editText14"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10" />

    <EditText
        android:id="@+id/editText16"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/editText15"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText17"
        android:layout_marginTop="17dp"
        android:background="@drawable/bg_edittext"
        android:ems="10" />

    <EditText
        android:id="@+id/editText17"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText16"
        android:layout_marginTop="19dp"
        android:background="@drawable/bg_edittext"
        android:ems="10" />

    <EditText
        android:id="@+id/editText19"
        android:background="@drawable/bg_edittext"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/editText18"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10" />

    <EditText
        android:id="@+id/editText20"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/editText19"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@+id/textView10"
        android:background="@drawable/bg_edittext"
        android:ems="10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText11"
        android:layout_alignBottom="@+id/editText11"
        android:layout_alignLeft="@+id/textView9"
        android:textSize="20dp" 
        android:text="@string/zc" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText12"
        android:layout_alignBottom="@+id/editText12"
        android:layout_toLeftOf="@+id/editText12"
        android:text="@string/rzrq"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText13"
        android:layout_alignBottom="@+id/editText13"
        android:layout_alignLeft="@+id/textView12"
        android:textSize="20dp" 
        android:text="@string/zzrq" />

    <TextView
        android:id="@+id/textView16"
        android:textSize="20dp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText16"
        android:layout_alignBottom="@+id/editText16"
        android:layout_alignLeft="@+id/textView15"
        android:text="@string/cwcs" />

    <TextView
        android:id="@+id/textView17"
        android:textSize="20dp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText17"
        android:layout_alignBottom="@+id/editText17"
        android:layout_alignLeft="@+id/textView16"
        android:text="@string/yxbz" />

    <TextView
        android:id="@+id/textView18"
        android:textSize="20dp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText18"
        android:layout_alignBottom="@+id/editText18"
        android:layout_alignLeft="@+id/textView17"
        android:text="@string/zjlb" />

    <TextView
        android:id="@+id/textView19"
        android:textSize="20dp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText19"
        android:layout_alignBottom="@+id/editText19"
        android:layout_alignLeft="@+id/textView18"
        android:text="@string/cjsj" />

    <TextView
        android:id="@+id/textView20"
        android:textSize="20dp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText20"
        android:layout_alignBottom="@+id/editText20"
        android:layout_alignLeft="@+id/textView19"
        android:text="@string/ygzh" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText14"
        android:layout_alignBottom="@+id/editText14"
        android:layout_alignRight="@+id/textView13"
        android:text="@string/jdr"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText15"
        android:layout_alignBottom="@+id/editText15"
        android:layout_alignLeft="@+id/textView13"
        android:text="@string/zjhm"
        android:textSize="20dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="49dp"
        android:layout_marginRight="56dp"
        android:text="@string/submit" />
    
    </RelativeLayout>
</ScrollView>
