<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
     android:id="@+id/txt_logo"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:text="@string/dailyRecord"
     android:textColor="@color/app_primary"
     android:textStyle="bold"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:textSize="35dp"
     android:clickable="true"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true" />
    <View 
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/grey_900"
        />
    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">
	 <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >
            <LinearLayout 
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/txt_prepareWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/prepareWork"
                    android:textColor="@color/app_primary"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="20sp"
                    android:clickable="true"/>

            <SeekBar
                android:id="@+id/seekBar_prepareWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:minWidth="200sp" />
            
            <TextView 
                android:id="@+id/text_prepareWork"
                android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/hours"
	           android:layout_weight="1"
                />"
            </LinearLayout>
            <EditText
                    android:id="@+id/editText_prepareWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/prompt_repareWord"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:padding="8dp"
                    android:singleLine="false"
                    android:textColorHint="@color/grey_0"
                    android:scrollbars="vertical" />

            <LinearLayout 
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/txt_doneWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/doneWork"
                    android:textColor="@color/app_primary"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="20sp"
                    android:clickable="true"/>
            <SeekBar 
               android:id="@+id/seekBar_doneWork"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_weight="6"
	           android:minWidth="200sp"/>
            
            <TextView 
                android:id="@+id/text_doneWord"
                android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/hours"
                />
            
            </LinearLayout>
            <EditText
                    android:id="@+id/editText_doneWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/prompt_repareWord"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:padding="8dp"
                    android:singleLine="false"
                    android:textColorHint="@color/grey_0"
                    android:scrollbars="vertical" />
			
        </LinearLayout>
    
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_gravity="bottom"
           >
           <Button
               android:id="@+id/btn_save"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/grey_0"
               android:layout_marginTop="2dp"
               android:text="@string/save"
               android:layout_weight="1.0"
               android:background="@drawable/login_btn"/>
           <TextView 
               android:paddingLeft="20sp"
               android:paddingStart="20sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/state"
               android:layout_weight="1.0"
               android:textSize="20sp"
               />
           <Spinner
               android:paddingLeft="0sp"
               android:paddingStart="0sp" 
               android:id="@+id/spinner_state"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1.0"
               />
           
       </LinearLayout>
       
       <Button
           android:id="@+id/btn_submit"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/green_900"
           android:layout_marginTop="2dp"
           android:text="@string/submit"
           android:background="@drawable/login_btn"
           />
       
       </LinearLayout>
       </ScrollView>
</LinearLayout>